# zpl

./: .CONTRIBUTING.md.swp  .README.md.swp  .clang-format  .gitignore  .gitmodules  .npmignore  .travis.yml  AUTHORS.md  CHANGELOG  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  NOTICE.md  README.md  build.bat  build.sh  build_examples.sh.bat  build_tests.bat  build_tests.bat.sh  build_tests.sh.bat  build_win.bat  docs.bat  docs.bat.sh  docs.sh.bat  generate.bat  generate.sh.bat  package.json  project.4coder  razzle.cmd  run.bat  zpl.10x
.github/: AUTHORS.md  CONTRIBUTING.md  FUNDING.yml  PLATFORM_DEBT.md  SECURITY.md
code/: .clang-complete  test.bat  test.c  zpl.h  zpl_cull.h  zpl_gl3w_gen.py  zpl_glgen.h  zpl_glgen.py  zpl_hedley.h  zpl_image.h  zpl_math.h  zpl_math.hpp  zpl_opengl.h  zpl_platform.h
data/: test.json5
docs/: CONTRIBUTING.md  (+6 more)
misc/: CMakeLists.txt  adder.js  build_cc.sh  embed_file.sh  packager.js  rewrite_macros.js  toc.sh  zpl_glgen.py
misc/data/: airtravel.csv  glsl_diffuse.json5  test.json5  test_archive.tar  uri_example.txt
misc/old/: build_win.bat  run.bat
misc/old/code/zpl/: __main__.c  containers.c  file.c  header.c  json.c  opengl.c  opts.c  print.c
misc/old/docs/: Doxyfile-mcss  header.html
misc/old/misc/projects/zpl/: zpl.vcxproj  zpl.vcxproj.filters
misc/old/tests/: cowsay.c  hashtable.c  json_create.c  opengl.c  timers.c
misc/projects/zpl/: README.txt
misc/scripts/: build.bat  build.sh  build_msvc.bat
misc/scripts/extra/: static_check.bat
misc/win/: build_example.bat  build_examples.bat  build_generic.bat  build_quick.bat  run_4ed.bat  run_example.bat  run_quick.bat  run_tester.bat  setup_cl_generic.bat
(+356 files in other folders)
